# RayTracer

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README  README.md  TODO  test.ppm
C-sources/: AUTHORS  Makefile
C-sources/raytracer/: Makefile  color.c  input.c  input_light.c  lights.c  str_tools.c  str_utils.c  vector3.c
raytracer/: .scene.c.swp  camera.c  color.c  input.c  input_camera.c  input_light.c  input_primitive.c  lights.c  output.c  rt.c  rt.h  scene.c  str_tools.c  str_utils.c  vector3.c
src/: Makefile  light.hh  main.cc  scene.cc  scene.hh  shapes.hh  vector.hh
src/camera/: camera.cc  camera.hh  test_camera.hpp
src/canvas/: canvas.cc  canvas.hh  test_canvas.hpp
src/color/: color.cc  color.hh  test_color.hpp
src/input/: parser.cc  parser.hh  svati_parser.cc  svati_parser.hh
src/intersection/: intersection.cc  intersection.hh  test_intersection.hpp
src/lights/: ambient_light.cc  ambient_light.hh  directional_light.cc  directional_light.hh  light.cc  light.hh  point_light.cc  point_light.hh  test_point_light.hpp
src/main/: main.cc
src/material/: material.cc  material.hh  test_material.hpp
src/matrix/: matrix.cc  matrix.hh  test_matrix.hpp
src/object/: object.cc  object.hh  test_object.hpp
src/objects/: object.cc  object.hh  triangle.cc  triangle.hh
src/plane/: plane.cc  plane.hh  test_plane.hpp
src/point/: point.cc  point.hh  test_point.hpp
src/ray/: ray.cc  ray.hh  test_ray.hpp
src/raytracer/: ray.cc  ray.hh
src/scene/: scene.cc  scene.hh
src/sphere/: sphere.cc  sphere.hh  test_sphere.hpp
src/tuple/: test_tuple.hpp  tuple.cc  tuple.hh
src/utils/: color.cc  color.hh  constants.hh  op_overloading.hpp  vector3.cc  vector3.hh
src/vector/: test_vector.hpp  vector.cc  vector.hh
src/world/: test_world.hpp  world.cc  world.hh
tests/: test.cc
